<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="240dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/harvestmoon"
            android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Harvest Moon"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="250dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="400dp"
        android:layout_height="111dp"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="397dp"
        tools:text="@string/paragraph1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2022-02-25"
        android:textColor="@color/Grey"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="277dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/star"
        tools:layout_editor_absoluteX="404dp"
        tools:layout_editor_absoluteY="254dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4.4"
        android:textColor="@color/Gold"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="439dp"
        tools:layout_editor_absoluteY="254dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Action"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="319dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RPG"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="319dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="About Game"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="360dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="395dp"
        android:layout_height="145dp"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="518dp"
        tools:text="@string/paragraph2" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="693dp"
        tools:text="@string/paragraph3" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="413dp"
        android:layout_height="35dp"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="747dp"
        tools:text="@string/paragraph4" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="798dp"
        tools:text="@string/paragraph5" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="850dp"
        tools:text="@string/paragraph6" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="902dp"
        tools:text="@string/paragraph7" />


</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>